syntax = "proto3";

package kyve.pool.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "github.com/KYVENetwork/chain/x/pool/types";

message EventCreatePool {
  // creator ...
  string creator = 1;
  // id ...
  uint64 id = 2;
  // name ...
  string name = 3;
  // runtime ...
  string runtime = 4;
  // logo ...
  string logo = 5;
  // config ...
  string config = 6;
  // start_key ...
  string start_key = 7;
  // upload_interval ...
  uint64 upload_interval = 8;
  // operating_cost ...
  uint64 operating_cost = 9;
  // min_stake ...
  uint64 min_stake = 10;
  // max_bundle_size ...
  uint64 max_bundle_size = 11;
  // version ...
  string version = 12;
  // binaries ...
  string binaries = 13;
}

// EventFundPool is an event emitted when a pool is funded.
message EventFundPool {
  // pool_id is the unique ID of the pool.
  uint64 pool_id = 1;
  // address is the account address of the pool funder.
  string address = 2;
  // amount ...
  uint64 amount = 3;
}

// EventDefundPool is an event emitted when a pool is defunded.
message EventDefundPool {
  // pool_id is the unique ID of the pool.
  uint64 pool_id = 1;
  // address is the account address of the pool funder.
  string address = 2;
  // amount ...
  uint64 amount = 3;
}